--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,22 +1,12 @@
+/* CRIO_SOLUTION_START_MODULE_UNDERSTANDING_BASICS */
+/* CRIO_SOLUTION_END_MODULE_UNDERSTANDING_BASICS */
 .footer {
-    height: 25vh;
-    background-color: #042C22;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer-text {
-    color: #fff;
-    opacity: 0.5;
-    text-align: center;
-    font-weight: 300;
-    width: 100%;
-}
-
-@media screen and (min-width: 768px) {
-    .footer-text {
-        width: 40%;
-    }
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background: #1e2833;
+  text-align: center;
+  height: 100px;
+  z-index: 2;
 }
