--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -1,38 +1,60 @@
-#add-new-btn {
-    text-transform: none;
-    font-weight: 700;
-    margin: 1rem 0;
+/* CRIO_SOLUTION_START_MODULE_CHECKOUT */
+/* CRIO_SOLUTION_END_MODULE_CHECKOUT */
+
+.checkout-shipping {
+  padding: 2em;
+  /* Reduce 70px of header and 100px of footer
+  ** Make footer display at bottom even if less content on main page
+  */
+  min-height: calc(100vh - 170px);
+}
+.checkout-container {
+  padding: 70px 0em 0em 0em;
+}
+.checkout-row {
+  display: block;
+  margin: 1.5em auto;
 }
 
-.address-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem;
-    margin: 1rem 0;
-    border-radius: 5px;
-    cursor: pointer;
+.addresses {
+  width: 100%;
+}
+.address {
+  margin-right: 20px;
+  margin-bottom: 20px;
+
+  /* height: 100%; */
+}
+.address-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+  padding: 20px;
+  white-space: pre-wrap;
+}
+.address-text {
+  width: 200px;
 }
 
-.shipping-container {
-    padding: 2rem 1rem;
+.new-address {
+  width: 30em;
+  margin-right: 1em;
+  margin-bottom: 1em;
 }
 
-.selected {
-    border: 1px solid #00A278;
-    background-color: #E9F5E1;
+label.ant-radio-button-wrapper {
+  display: block;
+  height: calc(100% - 2.5em);
+  padding: 0px;
 }
 
-.not-selected {
-    border: 1px solid #ddd;
+.delete-address-btn {
+  width: 100%;
+  height: 2.5em;
 }
-
-p {
-    color: #3C3C3C;
-}
-
-@media screen and (min-width: 768px) {
-    .shipping-container {
-        padding: 2rem 4rem;
-    }
+.checkout-cart {
+  /* height: 100vh; */
+  background: #f6f8fa;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
 }
