--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,27 +1,39 @@
+/* CRIO_SOLUTION_START_MODULE_UNDERSTANDING_BASICS */
+/* CRIO_SOLUTION_END_MODULE_UNDERSTANDING_BASICS */
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    height: 5vh;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
-    background: #ffffff;
+  position: fixed;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 2;
+  width: 100%;
+  padding: 0.75em 2em;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  background: #ffffff;
+  height: 70px;
 }
 
-.username-text {
-    display: none;
+.profile-image {
+  height: 30px;
+  padding-right: 0.5em;
 }
 
 .header-title {
-    cursor: pointer;
+  font-size: 1.5em;
+  cursor: pointer;
 }
 
-.explore-button {
-    color: #00a278 !important;
+.header-action {
+  display: flex;
+  align-items: center;
 }
 
-@media screen and (min-width: 768px) {
-    .username-text {
-        display: block;
-    }
+.header-info {
+  padding-right: 2em;
+}
+.header-link {
+  padding: 0em 1em;
+  cursor: pointer;
+  color: #1890ff;
 }
