--- a/src/components/Thanks.css
+++ b/src/components/Thanks.css
@@ -1,36 +1,15 @@
-p {
-    margin-block-start: 0;
-    margin-block-end: 0;
-    margin-bottom: 1rem;
-}
+/* CRIO_SOLUTION_START_MODULE_CHECKOUT */
+/* CRIO_SOLUTION_END_MODULE_CHECKOUT */
 
-.greeting-container {
-    min-height: 60vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 1rem;
-    background-color: #DCFFE4;
+.thanks-container {
+  background: #dcffe4;
+  margin: 120px auto;
+  width: max-content;
+  padding: 5em;
+  box-sizing: content-box;
+  text-align: center;
 }
-
-#balance-overline {
-    font-weight: 700;
-    margin: 1rem 0 0.5rem 0;
-}
-
-#balance {
-    font-weight: 700;
-    font-size: 1.25rem;
-}
-
-#continue-btn {
-    font-weight: 700;
-    text-transform: none;
-}
-
-@media screen and (min-width: 768px) {
-    .greeting-container {
-        padding: 4rem;
-    }
+.thanks-line {
+  font-size: 1.25em;
+  margin: 1.5em 0;
 }
